update GameServiceImpl
minor adjustment